# procnet

./: .clang-format  .clangd  .envrc  .gitattributes  .gitignore  Cargo.toml  Makefile  README.md  build.rs  flake.nix  rust-toolchain.toml  rustfmt.toml
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
crates/procnet/: Cargo.toml
crates/procnet-core/: Cargo.toml
crates/procnet-core/src/: errors.rs  events.rs  ipc.rs  lib.rs  stats.rs
crates/procnet-core/src/ipc/: client.rs  daemon.rs
crates/procnet/src/: cli.rs  errors.rs  main.rs  tui.rs
crates/procnet/src/tui/: input.rs  keys.rs  state.rs  theme.rs  view.rs
crates/procnetd/: Cargo.toml  build.rs
crates/procnetd/src/: app.rs  errors.rs  events.rs  main.rs  server.rs  signals.rs  state.rs  stats_map.rs
crates/procnetd/src/bpf/: procnet.bpf.c  vmlinux.h  vmlinux_arm64.h
docs/: plan.md
packaging/: nfpm.yaml  procnetd-system.service  procnetd.service
scripts/: install-caps.sh  install-service.sh  regen-vmlinux.sh  uninstall-service.sh
src/: app.rs  events.rs  main.rs  stats.rs  tui.rs
src/bpf/: procnet.bpf.c
src/tui/: state.rs  theme.rs  view.rs
