[workspace]
members = ["crates/procnet-core", "crates/procnetd", "crates/procnet"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.102"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
codegen-units = 1
lto = "fat"
debug = false
strip = true

[profile.profiling]
inherits = "release"
debug = true
strip = false
