[workspace]
members = ["crates/procnet-core", "crates/procnetd", "crates/procnet"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.lints.rust]
unused = "warn"
future_incompatible = "warn"
let_underscore = "warn"
nonstandard_style = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

missing_errors_doc = "allow"

panic = "warn"
unwrap_used = "warn"
expect_used = "warn"
dbg_macro = "warn"
todo = "warn"

[workspace.dependencies]
anyhow = "1.0.102"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
codegen-units = 1
lto = "fat"
debug = false
strip = true

[profile.profiling]
inherits = "release"
strip = false
debug = "full"
lto = false
