[workspace]
members = ["crates/procnet-core", "crates/procnetd", "crates/procnet"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.lints.rust]
unused = "warn"
future_incompatible = "warn"
nonstandard_style = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

cast_precision_loss = "allow"
inline_always = "allow"
panic = "warn"
unwrap_used = "warn"
expect_used = "warn"
dbg_macro = "warn"
todo = "warn"
missing_errors_doc = "allow"
uninlined_format_args = "allow"
needless_pass_by_value = "allow"

[workspace.dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
log = "0.4"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.18"

[profile.release]
codegen-units = 1
lto = "fat"
debug = false
strip = true

[profile.profiling]
inherits = "release"
strip = false
debug = "full"
lto = false
