[package]
name = "procnetd"
version.workspace = true
edition.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
env_logger = "0.11.11"
log = { workspace = true }
libc = "0.2.183"
libbpf-rs = "0.26.0"
procnet-core = { path = "../procnet-core" }
thiserror = { workspace = true }

[build-dependencies]
libbpf-cargo = "0.26.0"
